# file-guard

./: Cargo.toml  README.md  build.rs  config.example.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
debian/: control  copyright
packaging/: README.md  config.toml
packaging/debian/: postinst
packaging/systemd/: file-guard-agent@.service  file-guard-agent@.socket  file-guard.service
packaging/tmpfiles/: file-guard.conf
src/: cli.rs  config.rs  control.rs  daemon.rs  es.rs  interceptor.rs  logging.rs  main.rs
src/fuse_fs/: credential_fs.rs  fuse_interceptor.rs  mod.rs
src/policy/: engine.rs  rule.rs
src/process/: identify.rs  linux.rs  macos.rs  mod.rs
src/prompt/: client.rs
